[package]
name = "tests"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
doc-comment = "0.3.3"
rand = { version = "0.8", features = ["small_rng"] }
rand_0_7 = { package = "rand", version = "0.7" }
rand_0_5 = { package = "rand", version = "0.5" }
rand_pcg = "0.3"
rand_chacha = "0.3"
rand_distr = "0.4"
rand_distr_0_2 = { package = "rand_distr", version = "0.2" }
rand_seeder = "0.2"
rayon = "1.5.3"
